-Major reworks and rewrites to meet higher design standards
Signed-off-by: Flytre <flytre7@gmail.com>